jena-shex/src/test/files/spec/negativeSyntax/capitol-A.shex
# capital A keyword
# source: turtle-syntax-bad-kw-01.ttl
<http://a.example/IssueShape> {
   A .
}

